# Arch-Lang

./: .gitignore  .vscode  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL.md  README.md  build.sbt
.arch/: Archfile
config/: version.h.in
docs/develop/: build.md
example/: CMakeLists.txt  main.arc
example/icli/: main.cpp
example/utlc/: main.arc
include/Arch/: README.md
include/Arch/core/: context.h  term.h  type.h  value.h
include/Arch/core/basetype/: baseType.h  real.cpp  real.h
include/Arch/icli/: icli.h  terminal_utils.h
include/Arch/syntax/: ast.h  parser.h  span.h  syntax.md  token.h
include/arch/libcore/: context.h  hott.cpp  hott.h  term.h  type.h
include/arch/libcore/basetype/: real.h
include/arch/libsyntax/: lexer.h  parser.h  span.h  token.h
include/arch/theory/utlc/: boolean.h  constant.h  number.h
include/arch/util/: char_utils.h  string_utils.h
modules/@std/: Archfile
scripts/install/: install.ps1
scripts/uninstall/: uninstall.ps1
src/arch/: CMakeLists.txt  arch.cpp  command.h  context.cpp  help.h  main.cpp
src/archi/: CMakeLists.txt
src/cli/: CMakeLists.txt  icli.cpp  main  main.cpp  terminal.h
src/libcore/: CMakeLists.txt
src/libicli/: CMakeLists.txt  icli.cpp
src/libsyntax/: CMakeLists.txt  lexer.cpp  parser.cpp
src/syntax/: lexer.cpp  parser.cpp
syntax/vscode-arch/: README.md  package.json  vsc-extension-quickstart.md
syntax/vscode-arch/syntaxes/: arch.tmLanguage.json
